--- a/backend/core_apps/templates/emails/account_locked.html
+++ b/backend/core_apps/templates/emails/account_locked.html
@@ -1,8 +1,8 @@
-{% extends emails/base.html %}
+{% extends "emails/base.html" %}
 
 {% block title %}
     Account Locked
-{% block title%}
+{% endblock %}
 
 {% block content %}
 <h2>Your account has been locked</h2>
