--- a/backend/core_apps/templates/emails/otp_email.html
+++ b/backend/core_apps/templates/emails/otp_email.html
@@ -1,8 +1,8 @@
-{% extends emails/base.html %}
+{% extends "emails/base.html" %}
 
 {% block title %}
     Your Login OTP
-{% block title%}
+{% endblock %}
 
 
 {% block content %}
